<resources>
    <string name="app_name">assignment3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
    <string name="result">Result: %1$s</string>
    <string name="input_error_please_enter_numeric_values">Input Error , Please enter numeric values</string>
    <string name="favorite_calculator">Favorite Calculator</string>
</resources>