<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#ffb3ba">

        <EditText
            android:id="@+id/input_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_1"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/teal_700"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/input_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_2"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/teal_700"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_margin="6dp"/>


        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/add" />

        <Button
            android:id="@+id/subtract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="3dp"/>

    </LinearLayout>

</LinearLayout>
